--- a/angular.json
+++ b/angular.json
@@ -24,6 +24,7 @@
               "src/assets"
             ],
             "styles": [
+              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "src/styles.css"
             ],
             "scripts": []
@@ -57,6 +58,15 @@
                   "maximumError": "10kb"
                 }
               ]
+            },
+            "hi": {
+              "aot": true,
+              "outputPath": "src/dist/my-app/hi",
+              "i18nFile": "src/locale/messages.hi.xlf",
+              "i18nFormat": "xlf",
+              "i18nLocale": "hi",
+              "i18nMissingTranslation": "error",
+              "baseHref": "/hi/"
             }
           }
         },
@@ -68,6 +78,9 @@
           "configurations": {
             "production": {
               "browserTarget": "my-app:build:production"
+            },
+            "hi": {
+              "browserTarget": "my-app:build:hi"
             }
           }
         },
@@ -89,6 +102,7 @@
               "src/assets"
             ],
             "styles": [
+              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "src/styles.css"
             ],
             "scripts": []
@@ -120,6 +134,7 @@
           }
         }
       }
-    }},
+    }
+  },
   "defaultProject": "my-app"
 }
